--- a/index.html
+++ b/index.html
@@ -168,6 +168,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" sre="/index.tsx></script>
+    <script type="module" sre="index.tsx><script>
   </body>
 </html>
